--- a/how-to/index.html
+++ b/how-to/index.html
@@ -39,13 +39,22 @@ title: How to
         &emsp;article_doi: https://doi.org/10.3389/fpsyg.2018.01398<br>
         &emsp;---
         </code>
+        <li>After writing your post, "commit" it to your forked repo:</li>
+        <code>
+        &emsp;$ git add &lt;post_filename&gt;<br>
+        &emsp;$ git commit -m 'new post'<br>
+        &emsp;$ git push
+        </code>
     </ol>
 
-    <h1>How to test your post locally.</h1>
+    <h1>How to test your post locally</h1>
     <ol>
-        <li>Install this: <code>&emsp;gem install github-pages</code></li>
-        <li>Enter this from your repository directory: <code>jekyll build; jekyll serve --baseurl ''</code></li>
+        <li>Install this: <code>$ gem install github-pages</code></li>
+        <li>Enter this from your repository directory: <code>$ jekyll build; jekyll serve --baseurl ''</code></li>
         <li>Open your browser and go to <code>http://localhost:4000</code></li>
-        <li>Refresh this page as you update your post.</li>
+        <li>Refresh that page as you update your post.</li>
     </ol>
+
+    <h1>How to submit a pull request</h1>
+
 </div>
