--- a/how-to/index.html
+++ b/how-to/index.html
@@ -22,23 +22,8 @@ title: How to
     <h1>How to make a post</h1>
     <ol>
         <li>Make sure you've forked the readordie repository.</li>
-        <li>Posts are written using <a href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a>. The only constraint beyond that is that <b>you must place the file in the <code>_posts</code> directory, follow the filename template, and insert a proper header in the file</b>.</li>
-        <br>
-        Filenames must follow this format:<br>
-        <code>&lt;year&gt;-&lt;month&gt;-&lt;day&gt;-&lt;lead_author&gt;-&lt;pub_year&gt;-&lt;journal_abbrev&gt;.md</code><br>
-        <br>
-        Headers must be inserted at the top of the post file and follow this format:<br>
-        <code>
-        &emsp;---<br>
-        &emsp;layout: post<br>
-        &emsp;title: "Fogel et al., 2018, Front Psychol"<br>
-        &emsp;author: remrama<br>
-        &emsp;date: 2019-08-19 16:04:08 -0500<br>
-        &emsp;tags: [dreaming,textanalysis]<br>
-        &emsp;article_title: "A Novel Approach to Dream Content Analysis Reveals Links Between Learning-Related Dream Incorporation and Cognitive Abilities"<br>
-        &emsp;article_doi: https://doi.org/10.3389/fpsyg.2018.01398<br>
-        &emsp;---
-        </code>
+        <li>Posts are written using <a href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a>. Download <a href="https://github.com/remrama/readordie/_posts/2019-01-01-author-pubyear-journabbrev.md" class="download" title="blog post markdown template">this template file</a> and change it to fit your new post (including the filename). You can edit Markdown files (<code>.md</code> extension) in any basic text editor.</li>
+        <li>You <b>must place your file in the <code>_posts</code> directory.</b>
         <li>After writing your post, "commit" it to your forked repo:</li>
         <code>
         &emsp;$ git add &lt;post_filename&gt;<br>
