--- a/how-to/index.html
+++ b/how-to/index.html
@@ -22,7 +22,7 @@ title: How to
     <h1>How to make a post</h1>
     <ol>
         <li>Make sure you've forked the readordie repository.</li>
-        <li>Posts are written using <a href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a>. Download <a href="https://github.com/remrama/readordie/_posts/2019-01-01-author-pubyear-journabbrev.md" class="download" title="blog post markdown template">this template file</a> and change it to fit your new post (including the filename). You can edit Markdown files (<code>.md</code> extension) in any basic text editor.</li>
+        <li>Posts are written using <a href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a>. Download <a href="/_posts/2019-01-01-author-pubyear-journabbrev.md" class="download" title="blog post markdown template">this template file</a> and change it to fit your new post (including the filename). You can edit Markdown files (<code>.md</code> extension) in any basic text editor.</li>
         <li>You <b>must place your file in the <code>_posts</code> directory.</b>
         <li>After writing your post, "commit" it to your forked repo:</li>
         <code>
