--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home page
             By <strong>{{ site.start_day }} {{ site.start_due }}</strong>, add ${{ site.donation }} to the <a href="https://paypal.me/pools/c/8huH01ax1W">money pool</a> and you're committed for the week.
         </li>
         <li>
-            Write <strong>{{ site.n_articles }} blog post{% if site.n_articles > 1 %}s{% endif %}</strong>, push them to your fork of the <a href="https://github.com/remrama/readordie">GitHub repo</a>, and submit a pull request by {{ site.end_day }} {{ site.end_due }}.
+            Write <strong>{{ site.n_articles }} blog post{% if site.n_articles > 1 %}s{% endif %}</strong>, push {% if site.n_articles == 1 %}it{% else %}them{% endif %} to your fork of the <a href="https://github.com/remrama/readordie">GitHub repo</a>, and submit a pull request by {{ site.end_day }} {{ site.end_due }}.
         </li>
         <li>
             If you complete step 2:<br>
