--- a/how-to/index.html
+++ b/how-to/index.html
@@ -41,8 +41,8 @@ title: How to
 
     <h1>How to test your post locally</h1>
     <ol>
-        <li>Install this: <code>$ gem install github-pages</code></li>
-        <li>Enter this from your repository directory: <code>$ jekyll build; jekyll serve --baseurl ''</code></li>
+        <li>Install this: <code>gem install github-pages</code></li>
+        <li>Enter this from your repository directory: <code>jekyll build && jekyll serve --baseurl ''</code></li>
         <li>Open your browser and go to <code>http://localhost:4000</code></li>
         <li>Refresh that page as you update your post.</li>
     </ol>
