new link and subscribe opt

--- a/index.html
+++ b/index.html
@@ -21,4 +21,7 @@ title: Home page
             &emsp;You die, and your ${{ site.donation }} stays in the cumulative money pool.
         </li>
     </ol>
+    <p>
+        email "subscribe" to remym@utexas.edu for a weekly reminder
+    </p>
 </div>
