closes #9 with brief pull request instructions

--- a/how-to/index.html
+++ b/how-to/index.html
@@ -31,7 +31,7 @@ title: How to
         <li>Make sure you've forked the readordie repository.</li>
         <li>Posts are written using <a href="https://paperhive.org/help/markdown">Markdown syntax</a>. Copy/paste the contents of <a href="https://raw.github.com/remrama/readordie/master/_posts/2019-01-01-title-of-your-post.md" class="download" title="blog post markdown template">this template file</a> into your favorite text editor and change it to fit your new post (including the filename).</li>
         <li>You <b>must save your file in the <code>_posts</code> directory.</b>
-        <li>After writing your post, "commit" it to your forked repo:</li>
+        <li>After writing/saving your post, "commit" it to your forked repo:</li>
         <code>
             &emsp;git add &lt;post_filename&gt;<br>
             &emsp;git commit -m 'new post'<br>
@@ -48,5 +48,9 @@ title: How to
     </ol>
 
     <h1>How to submit a pull request</h1>
+    <ol>
+        <li>Go to your own readordie github (forked) repository and click the "New pull request" button.</li>
+        <li>Before clicking the final "Create pull request" button, you have the option to check that <em>the only new or changed file is your post</em> and add a comment (e.g., "Take my post so I shall live").</li>
+    </ol>
 
 </div>
