--- a/how-to/index.html
+++ b/how-to/index.html
@@ -50,7 +50,8 @@ title: How to
     <h1>How to submit a pull request</h1>
     <ol>
         <li>Go to your own readordie github (forked) repository and click the "New pull request" button.</li>
-        <li>Before clicking the final "Create pull request" button, you have the option to check that <em>the only new or changed file is your post</em> and add a comment (e.g., "Take my post so I shall live").</li>
+        <li>Before clicking the final "Create pull request" button, you have the option to check that <em>the only new or changed file is your post</em>.</li>
+        <li>After creating the pull request you have the option to add a comment (e.g., "Take my post so I shall live").</li>
     </ol>
 
 </div>
