--- a/index.html
+++ b/index.html
@@ -3,25 +3,33 @@ layout: default
 title: Home page
 ---
 <div class="blurb">
-    <h1>&#128214read or die &#128481</h1>
+    <h1>read &#128214 or die &#128481</h1>
     <p>
-        Need motivation to read? Join this group and if you don't read you will die.
+        Need motivation to read? Want some writing practice? Join this group and be held accountable to read and write about {{ site.n_articles }} academic paper{% if site.n_articles > 1 %}s{% endif %} per week.
+        <br><br>
+        It's also a way to become a bit more familiar with GitHub if you want that.
+        <br><br>
+        You put some money into a pot, and get it back if your write a blogpost about an academic article of your choosing. If you fail, your money stays in a cumulative plot that we &ndash; as a group &ndash; decide what to do with after it reaches a reasonable amount.
+        <br><br>
+        Your posts will be posted publically <a href="{{ "/blog" | relative_url }}">here</a> for your eternal perusing.
     </p>
     <ol>
         <li>
-            By <strong>{{ site.start_day }} {{ site.start_due }}</strong>, add ${{ site.donation }} to the <a href="{{ site.moneypool_url }}">money pool</a> and you're committed for the week.
+            By {{ site.start_day }} {{ site.start_due }}, add ${{ site.donation }} to the <a href="{{ site.moneypool_url }}">money pool</a> and you're committed for the week.
         </li>
         <li>
-            Write <strong>{{ site.n_articles }} blog post{% if site.n_articles > 1 %}s{% endif %}</strong>, push {% if site.n_articles == 1 %}it{% else %}them{% endif %} to your fork of the <a href="https://github.com/remrama/readordie">GitHub repo</a>, and <strong>submit a pull request</strong> by {{ site.end_day }} {{ site.end_due }}.
+            Write {{ site.n_articles }} blog post{% if site.n_articles > 1 %}s{% endif %}, push {% if site.n_articles == 1 %}it{% else %}them{% endif %} to your fork of the <a href="https://github.com/remrama/readordie">GitHub repo</a>, and submit a pull request by {{ site.end_day }} {{ site.end_due }}.
         </li>
         <li>
             If you complete step 2:<br>
-            &emsp;You live, and your ${{ site.donation }} is returned by the next Monday 23:59.<br>
+            &emsp;You live, and your ${{ site.donation }} is returned by the next day.<br>
             else:<br>
             &emsp;You die, and your ${{ site.donation }} stays in the cumulative money pool.
         </li>
     </ol>
     <p>
-        email "subscribe" to remym@utexas.edu for a weekly reminder
+        <a href="{{ "/how-to" | relative_url }}">More details</a> about how to set up the GitHub repository, submit a blogpost.
+        <br><br>
+        Join the <a href="https://groups.google.com/g/read_or_die">email list</a>.
     </p>
 </div>
